--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
-.vscode
-build
-tags
-.editorconfig
+# MAC OS:
+.DS_Store
+
+# BUILD FILES:
+build/
+
+# EDITOR CONFIG:
+.vscode/
+.vs/
+
+# XCODE
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
+ide_profiles/xcode/Debug/
+ide_profiles/xcode/ExtendedKF.build/
